# pvr.kartina.tv

./: .gitignore  CMakeLists.txt  README.md
depends/common/jsoncpp/: jsoncpp.txt
pvr.kartina.tv/: addon.xml  vod.py
pvr.kartina.tv/resources/: settings.xml
src/: client.cpp  kartinatvclient.cpp  kartinatvclient.h
